<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="@dimen/nav_width"
        android:layout_height="match_parent"
        android:background="@drawable/bg_nav"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_lg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/spacing_md"
            android:text="@string/app_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/spacing_md"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/navLiveTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_md"
            android:paddingVertical="@dimen/spacing_md">

            <ImageView
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="@dimen/nav_icon_size"
                android:src="@android:drawable/ic_menu_compass"
                android:tint="@color/text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:text="@string/nav_live_tv"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/nav_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navVod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_md"
            android:paddingVertical="@dimen/spacing_md">

            <ImageView
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="@dimen/nav_icon_size"
                android:src="@android:drawable/ic_menu_gallery"
                android:tint="@color/text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:text="@string/nav_vod"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/nav_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navDownloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_md"
            android:paddingVertical="@dimen/spacing_md">

            <ImageView
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="@dimen/nav_icon_size"
                android:src="@android:drawable/stat_sys_download"
                android:tint="@color/text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:text="@string/nav_downloads"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/nav_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_md"
            android:paddingVertical="@dimen/spacing_md">

            <ImageView
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="@dimen/nav_icon_size"
                android:src="@android:drawable/ic_menu_search"
                android:tint="@color/text_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:text="@string/nav_search"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/nav_text_size" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/navigation"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
