<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <ImageView
        android:id="@+id/videoPoster"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_poster_overlay" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/spacing_md"
        android:background="@drawable/bg_card"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="800dp">

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_headline"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/videoRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/focus_highlight"
                android:paddingHorizontal="@dimen/spacing_sm"
                android:paddingVertical="2dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_body" />

            <TextView
                android:id="@+id/videoYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>

        <TextView
            android:id="@+id/videoDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_body" />

        <TextView
            android:id="@+id/videoSynopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_primary"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingHorizontal="@dimen/spacing_xl"
                android:paddingVertical="@dimen/spacing_md"
                android:text="@string/play_from_begin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_body" />

            <Button
                android:id="@+id/downloadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:background="@drawable/bg_card"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingHorizontal="@dimen/spacing_xl"
                android:paddingVertical="@dimen/spacing_md"
                android:text="@string/download_series"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_body" />
        </LinearLayout>

        <TextView
            android:id="@+id/episodeSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:text="@string/episodes"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:visibility="gone" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
